--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^4.6.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "path": "^0.12.7",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
