--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "path": "^0.12.7",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
